Got other ships in. Need to do a big clean-up/refactor next

--- a/client/index.html
+++ b/client/index.html
@@ -51,12 +51,16 @@
 
 		  </div>
 		  <div id="selected" class="box">
-			<h2>Currently selected</h2>
+			<h2>Current position</h2>
 			<div id="selectedItem"></div>
 		  </div>
 		  <div id="players" class="box collapsible">
 			<h2>Players online</h2>
 			<ul id="playerList"></ul>
+		  </div>
+		  <div id="bots" class="box collapsible">
+			<h2>Enemies detected (0)</h2>
+			<ul id="botList"></ul>
 		  </div>
 	  </div>
 	  <div id="container"></div>
@@ -66,25 +70,6 @@
   <script src="libs/socket.io.min.js"></script>
   <script src="libs/three.min.js"></script>
   <script src="libs/tween.min.js"></script>
-
-	<script src="libs/BleachBypassShader.js"></script>
-	<script src="libs/BlendShader.js"></script>
-	<script src="libs/ConvolutionShader.js"></script>
-	<script src="libs/CopyShader.js"></script>
-	<script src="libs/FXAAShader.js"></script>
-	<script src="libs/HorizontalTiltShiftShader.js"></script>
-	<script src="libs/VerticalTiltShiftShader.js"></script>
-	<script src="libs/TriangleBlurShader.js"></script>
-	<script src="libs/VignetteShader.js"></script>
-
-	<script src="libs/EffectComposer.js"></script>
-	<script src="libs/RenderPass.js"></script>
-	<script src="libs/BloomPass.js"></script>
-	<script src="libs/ShaderPass.js"></script>
-	<script src="libs/MaskPass.js"></script>
-	<script src="libs/SavePass.js"></script>
-
-  
   <script src="libs/TrackballControls.js"></script>
   <script src="libs/THREEx.KeyboardState.js"></script>
   <script src="libs/Stats.js"></script> 
