--- a/client/index.html
+++ b/client/index.html
@@ -75,6 +75,7 @@
   <script src="libs/Stats.js"></script> 
   <script src="libs/smoothie.js"></script> 
   <script src="scripts/engine_core.js"></script>
+  <script src="scripts/engine_bullets.js"></script>
   <script src="scripts/engine_events.js"></script>
   <script src="scripts/engine_instructions.js"></script>
   <script>
