--- a/client/index.html
+++ b/client/index.html
@@ -77,6 +77,7 @@
   <script src="scripts/engine_core.js"></script>
   <script src="scripts/engine_bullets.js"></script>
   <script src="scripts/engine_events.js"></script>
+  <script src="scripts/engine_utility.js"></script>
   <script src="scripts/engine_instructions.js"></script>
   <script>
 	function getParameter(name)
