--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
   <head>
     <link href="styles/jquery-ui-1.9.2.custom.css" rel="stylesheet">
 	<link href="styles/engine.css" rel="stylesheet">
+	<link href="styles/ui.css" rel="stylesheet">
   </head>
   <title>Langenium Test Page</title>
   <body>
@@ -63,6 +64,12 @@
 			<ul id="botList"></ul>
 		  </div>
 	  </div>
+	  <div id="controls">
+			<div id="dashboard">
+				<div id="speed"></div>
+				<div id="altitude"></div>
+			</div>
+		</div>
 	  <div id="container"></div>
   </body>
   <script src="libs/jquery.min.js"></script>
