Fixing borked merge

--- a/client/index.html
+++ b/client/index.html
@@ -66,6 +66,8 @@
 	  </div>
 	  <div id="controls">
 			<div id="dashboard">
+				<div id="heading">
+				</div>
 				<div id="speed"></div>
 				<div id="altitude"></div>
 			</div>
@@ -73,6 +75,7 @@
 	  <div id="container"></div>
   </body>
   <script src="libs/jquery.min.js"></script>
+  <script src="libs/jQueryRotateCompressed.2.2.js"></script>
   <script src="libs/jquery-ui-1.9.2.custom.min.js"></script>
   <script src="libs/socket.io.min.js"></script>
   <script src="libs/three.min.js"></script>
