Corrected bots and other player positions. Everything should be using absolute positions, as opposed to incremental. Still need to work out why player isn't rotating on z axis when turning

--- a/client/index.html
+++ b/client/index.html
@@ -91,6 +91,7 @@
   <script src="scripts/engine_bullets.js"></script>
   <script src="scripts/engine_events.js"></script>
   <script src="scripts/engine_utility.js"></script>
+  <script src="scripts/player.js"></script>
   <script src="scripts/engine_instructions.js"></script>
   <script>
 	function getParameter(name)
