Implementing targetting box

--- a/client/index.html
+++ b/client/index.html
@@ -74,6 +74,9 @@
 				<div id="speed"></div>
 				<div id="altitude"></div>
 			</div>
+			<div id="targets">
+			<ul></ul>
+			</div>
 		</div>
 	  <div id="container"></div>
   </body>
