--- a/client/index.html
+++ b/client/index.html
@@ -94,7 +94,7 @@
   <script src="scripts/engine_bullets.js"></script>
   <script src="scripts/engine_events.js"></script>
   <script src="scripts/engine_utility.js"></script>
-  <script src="scripts/player.js"></script>
+  <script src="scripts/engine_player.js"></script>
   <script src="scripts/engine_instructions.js"></script>
   <script>
 	function getParameter(name)
