Fixed procedural tests to work online

--- a/public/tests/procedural_textures/webgl-test4.html
+++ b/public/tests/procedural_textures/webgl-test4.html
@@ -67,7 +67,7 @@
 					scene.add(mesh);
 				};
 
-				jsonLoader.load( "http://dev.langenium.com/game/assets/objects/ships/mercenary/valiant.js", addModelToScene );
+				jsonLoader.load( "/game/assets/objects/ships/mercenary/valiant.js", addModelToScene );
 
 
 				$('body').append(canvas);
