--- a/public/tests/procedural_textures/webgl-test5.html
+++ b/public/tests/procedural_textures/webgl-test5.html
@@ -61,7 +61,7 @@
 					draw_uvmap(geometry.faces);
 				};
 
-				jsonLoader.load( "http://dev.langenium.com/game/assets/objects/ships/mercenary/valiant2.js", addModelToScene );
+				jsonLoader.load( "/game/assets/objects/ships/mercenary/valiant2.js", addModelToScene );
 
 
 
