--- a/public/tests/textures/union-platform.html
+++ b/public/tests/textures/union-platform.html
@@ -70,10 +70,10 @@
 			function init() {
 
 				renderer = new THREE.WebGLRenderer({alpha: true});
-				renderer.setSize( window.innerWidth, window.innerHeight );
+				renderer.setSize( window.innerWidth - 50, window.innerHeight - 50 );
 				document.body.appendChild( renderer.domElement );
 
-				camera = new THREE.PerspectiveCamera( 70, window.innerWidth / window.innerHeight, 1, 10000 );
+				camera = new THREE.PerspectiveCamera( 70, window.innerWidth / window.innerHeight, 1, 1000000 );
 				camera.position.z = 400;
 
 				scene = new THREE.Scene();
@@ -168,6 +168,7 @@
 					
 					mesh = new THREE.Mesh(geometry, new THREE.MeshFaceMaterial(materials));
 					mesh.scale.set(50,50,50);
+					mesh.position.y -= 125;
 					scene.add(mesh);
 				};
 
@@ -205,15 +206,15 @@
 			function draw_texture () {
 					 // build a small canvas 32x64 and paint it in white
 				  var canvas  = document.createElement( 'canvas' );
-				  canvas.width = 32;
+				  canvas.width = 64;
 				  canvas.height    = 64;
 				  var context = canvas.getContext( '2d' );
 				  // plain it in white
 				  context.fillStyle    = '#ffffff';
-				  context.fillRect( 0, 0, 32, 64 );
+				  context.fillRect( 0, 0, 64, 128 );
 				  // draw the window rows - with a small noise to simulate light variations in each room
-				  for( var y = 2; y < 64; y += 2 ){
-				      for( var x = 0; x < 32; x += 2 ){
+				  for( var y = 2; y < 128; y += 2 ){
+				      for( var x = 0; x < 128; x += 2 ){
 				          var value   = Math.floor( Math.random() * 64 );
 				          context.fillStyle = 'rgb(' + [value, value, value].join( ',' )  + ')';
 				          context.fillRect( x, y, 2, 1 );
