--- a/public/index.html
+++ b/public/index.html
@@ -19,10 +19,10 @@
     </ul>
   </script>
 
-  <script src="js/vendor/jquery-1.11.0.js"></script>
-  <script src="js/vendor/handlebars-v1.3.0.js"></script>
-  <script src="js/vendor/ember-1.4.0.js"></script>
-  <script src="js/app.js"></script>
+  <script src="scripts/vendor/jquery-1.11.0.js"></script>
+  <script src="scripts/vendor/handlebars-v1.3.0.js"></script>
+  <script src="scripts/vendor/ember-1.4.0.js"></script>
+  <script src="scripts/app.js"></script>
   <!-- to activate the test runner, add the "?test" query string parameter -->
   <script src="tests/runner.js"></script>
 </body>
