--- a/client/src/modes/editor.html
+++ b/client/src/modes/editor.html
@@ -1,13 +1,15 @@
 <div class="ui thin inverted vertical sidebar menu">
-<div class="ui selection dropdown">
-  <input type="hidden" name="gender">
-  <div class="default text">Gender</div>
-  <i class="dropdown icon"></i>
-  <div class="menu">
-    <div class="item" data-value="1">Male</div>
-    <div class="item" data-value="0">Female</div>
-  </div>
-</div>
+	<div class="ui item">
+		<div class="ui fluid selection dropdown">
+			<div class="text">Active Scene</div>
+			<i class="dropdown icon"></i>
+			<div class="menu">
+				<div class="item">Choice 1</div>
+				<div class="item">Choice 2</div>
+				<div class="item">Choice 3</div>
+			</div>
+		</div>
+	</div>
 </div>
 <div class="ui black mini launch right attached button launch">
 	<i class="list layout icon"></i>
