- Looks quite nice now

--- a/client/src/modes/editor.html
+++ b/client/src/modes/editor.html
@@ -25,9 +25,9 @@
 	    </div>
 	</div>
 	
-	<div class="ui fluid action mini input">
+	<div class="ui fluid action mini transparent inverted input">
 	  <input type="text" placeholder=" > ">
-	  <div class="ui icon mini button"><i class="hide icon"></i></div>
+	  <div class="ui icon mini button secondary" onclick="$('.console .menu').slideToggle();"><i class="hide icon"></i></div>
 	</div>
     
 </div>
