--- a/client/src/modes/editor.html
+++ b/client/src/modes/editor.html
@@ -1,5 +1,5 @@
-<div class="ui inverted console segment fitted">
-	<div class="ui small inverted vertical fluid menu borderless">
+<div class="ui transparent console fitted">
+	<div class="ui small secondary inverted vertical fluid menu">
 	    <div class="item">
 	      <div class="content">
 	        <div class="header">Snickerdoodle</div>
@@ -25,9 +25,9 @@
 	    </div>
 	</div>
 	
-	<div class="ui fluid action mini transparent inverted input">
+	<div class="ui fluid action mini transparent input">
 	  <input type="text" placeholder=" > ">
-	  <div class="ui icon mini button secondary" onclick="$('.console .menu').slideToggle();"><i class="hide icon"></i></div>
+	  <div class="ui button mini inverted basic" onclick="$('.console .menu').slideToggle();"><i class="hide icon"></i></div>
 	</div>
     
 </div>
