- Dropdown working in editor - Cleaned up CSS for editor - Need to move back to website content and begin using Scenograph to   populate page content ( as if they were in-game panels and dialogue   boxes, the idea is to create a unified swish framework for displaying   text/tables/forms )

--- a/client/src/modes/editor.html
+++ b/client/src/modes/editor.html
@@ -31,7 +31,7 @@
 </div>
 <div class="ui thin inverted vertical sidebar menu">
 	<div class="ui item">
-		<div class="ui fluid selection dropdown">
+		<div class="ui compact fluid selection dropdown">
 			<div class="text">Active Scene</div>
 			<i class="dropdown icon"></i>
 			<div class="menu">
@@ -42,6 +42,6 @@
 		</div>
 	</div>
 </div>
-<div class="ui black mini launch right attached button launch sidebar-button">
+<div class="ui black tiny launch right attached button launch sidebar-button">
 	<i class="list layout icon"></i>
 </div>
