--- a/index.html
+++ b/index.html
@@ -1,79 +1,105 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Langenium : Web engine for hosting the Langenium game universe">
+    <title>Langenium by paulbrzeski</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Langenium</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1 class="header">Langenium</h1>
+        <p class="header">Web engine for hosting the Langenium game universe</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/paulbrzeski/Langenium">View on GitHub</a>
+        <ul>
+          <li class="download"><a class="buttons" href="https://github.com/paulbrzeski/Langenium/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/paulbrzeski/Langenium/tarball/master">Download TAR</a></li>
+          <li><a class="buttons github" href="https://github.com/paulbrzeski/Langenium">View On GitHub</a></li>
+        </ul>
 
-          <h1 id="project_title">Langenium</h1>
-          <h2 id="project_tagline">Web engine for hosting the Langenium game universe</h2>
+        <p class="header">This project is maintained by <a class="header name" href="https://github.com/paulbrzeski">paulbrzeski</a></p>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/paulbrzeski/Langenium/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/paulbrzeski/Langenium/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+      </header>
+      <section>
+        <h2>
+<a id="langenium" class="anchor" href="#langenium" aria-hidden="true"><span class="octicon octicon-link"></span></a>Langenium</h2>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>This is the repository for the Langenium server codebase. Content is provided by assets exported from the <a href="https://github.com/paulbrzeski/Langenium-Universe">Langenium Universe repo</a> into the /public folder</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<table>
+<thead>
+<tr>
+<th>Folder</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><strong><a href="/controllers">Controllers</a></strong></td>
+<td>Server application logic</td>
+</tr>
+<tr>
+<td><strong><a href="/models">Models</a></strong></td>
+<td>Currently mapped to Mongo, will be replaced by a json managing class called Data</td>
+</tr>
+<tr>
+<td><strong><a href="/public">Public</a></strong></td>
+<td>Currently static files, will need to think about how to integrate Universe exported files with 3rd party files like THREE.JS</td>
+</tr>
+<tr>
+<td><strong><a href="/routes">Routes</a></strong></td>
+<td>Expose server based routes including data points, authentication paths and socket connections</td>
+</tr>
+<tr>
+<td><strong><a href="/styles">Styles</a></strong></td>
+<td>Stylus files for the web client</td>
+</tr>
+<tr>
+<td><strong><a href="/views">Views</a></strong></td>
+<td>Jade templates for the web client</td>
+</tr>
+</tbody>
+</table>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<h2>
+<a id="todo" class="anchor" href="#todo" aria-hidden="true"><span class="octicon octicon-link"></span></a>TODO:</h2>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="installing-and-running-the-server" class="anchor" href="#installing-and-running-the-server" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installing and running the server</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<h4>
+<a id="environment-setup" class="anchor" href="#environment-setup" aria-hidden="true"><span class="octicon octicon-link"></span></a>Environment setup</h4>
 
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<h4>
+<a id="server-boot-options" class="anchor" href="#server-boot-options" aria-hidden="true"><span class="octicon octicon-link"></span></a>Server boot options</h4>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<a id="dev-tools" class="anchor" href="#dev-tools" aria-hidden="true"><span class="octicon octicon-link"></span></a>Dev tools</h3>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Langenium maintained by <a href="https://github.com/paulbrzeski">paulbrzeski</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
       </footer>
     </div>
-
-    
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+		          <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-37159175-1");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
 
   </body>
 </html>
