- Separated shaders from index template

--- a/src/modes/shaders.html
+++ b/src/modes/shaders.html
@@ -1,5 +1,6 @@
-	<!-- Shaders-->
-		<script type="x-shader/x-vertex" id="cloudVertShader">varying vec3 vTexCoord3D;
+<!-- Shaders-->
+<script type="x-shader/x-vertex" id="cloudVertShader">
+varying vec3 vTexCoord3D;
 varying vec3 vNormal;
 varying vec3 vViewPosition;
 
