- Cleaned up bootup text

--- a/index.html
+++ b/index.html
@@ -5,10 +5,6 @@
 		<script src="./client.js"></script>
 	</head>
 	<body onload="_init();">
-		<h1>Error: Client failed to start</h1>
-		<div class="ui black huge launch right attached button" style="width: 155px;">
-				<i class="icon list layout"></i>
-			<span class="text" style="display: inline;">Menu</span>
-			</div>
+		<h1>Starting client...</h1>
 	</body>
 </html>
