--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 		<script src="./client.js"></script>
 	</head>
 	<body onload="_init();">
-		<h1>Starting client...</h1>
+		<h1 style="text-align: center">Starting Langenium client...</h1>
+		<noscript>
+			This website requires Javascript to function. Please enable Javascript to continue.
+		</noscript>
 	</body>
 </html>
