--- a/editor.html
+++ b/editor.html
@@ -55,5 +55,14 @@
 		<div class="ui black tiny launch right attached button launch sidebar-button">
 			<i class="list layout icon"></i>
 		</div>
+		<script>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+			ga('create', 'UA-37159175-1', 'auto');
+			ga('send', 'pageview');
+		</script>
 	</body>
 </html>
