--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Langenium</title>
+		<title>Home | Langenium</title>
 		<link href="./src/core.css" rel="Stylesheet" />
 		<link href="./src/vendor/semantic.css" rel="Stylesheet" />
 		<link href="./src/modes/website.css" rel="Stylesheet" />
@@ -103,5 +103,14 @@
 				</div>
 			</div>
 		</div>
+		<script>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+			ga('create', 'UA-37159175-1', 'auto');
+			ga('send', 'pageview');
+		</script>
 	</body>
 </html>
