Games page is presentable. Onto about

--- a/games.html
+++ b/games.html
@@ -33,10 +33,18 @@
 				</nav>
 			</div>
 			<div id="page" class="row">
-				<div class="twelve wide column">
-					<h2>Under construction</h2><br>
-					<p>Get the latest update on the <a href="http://facebook.com/Langenium">Facebook page</a></p><br>
-					<p>Test the Langenium Engine via the <a href="/editor.html">Editor</a>
+				<div class="six wide column">
+					<img src="/src/images/exordium-poster-thumb.png" />
+				</div>
+				<div class="ten wide column">
+					<h2>Epoch Exordium</h2><br>
+					<h4>Release date: <em>2015~2016</em></h4><br>
+					<p>Epoch Exordium is a single player RPG currently in development</p><br>
+					<p>
+					The story is about an astronaut, Jack. Jack wakes up on the Helios Station with memory troubles. The onboard AI WERP guides him through operating and repairing the systems on the station in order to produce exordium and send it to Earth.</p><br>
+					<p>Music has been sourced from various classical composers. Soundtrack available on <a href="https://soundcloud.com/paul-brzeski/sets/epoch-exordium-soundtrack">Soundcloud</a>.
+					</p><br>
+					<p>Visit the <a href="/editor.html">Langenium Editor</a> to test the latest developments</p>
 				</div>
 			</div>
 		</div>
