- Blog just needs CSS now

--- a/games.html
+++ b/games.html
@@ -33,7 +33,7 @@
 				</nav>
 			</div>
 			<div id="page" class="row">
-				<div class="six wide column">
+				<div class="six wide column" style="text-align: center">
 					<img src="/src/images/exordium-poster-thumb.png" />
 				</div>
 				<div class="ten wide column">
