--- a/about.html
+++ b/about.html
@@ -35,12 +35,14 @@
 			<div id="page" class="row">
 				<div class="sixteen wide column">
 				<p>Langenium is an upcoming sci-fi series of games. The custom engine is open source and based on open technologies including webGL, node.js and SVG. As a web based series, Langenium relies heavily on procedural generation to reduce content size. </p><br>
-				<p>The project is hosted publicly on Github and is open for anyone to provide feedback and review. <br>
-Code development: <a href="https://github.com/paulbrzeski/Langenium">https://github.com/paulbrzeski/Langenium</a> <br>
-Creative development: <a href="https://github.com/paulbrzeski/Langenium-Universe">https://github.com/paulbrzeski/Langenium-Universe</a> </p><br>
+				<p>The project is hosted publicly on Github and is open for anyone to provide feedback and review. </p><br>
+				<p>
+					Code development: <a href="https://github.com/paulbrzeski/Langenium">https://github.com/paulbrzeski/Langenium</a> <br>
+					Creative development: <a href="https://github.com/paulbrzeski/Langenium-Universe">https://github.com/paulbrzeski/Langenium-Universe</a> </p><br>
+				</p>
 				<p>The technologies for the vision behind Langenium are still on the bleeding edge of web development and as a result the project does not have any fixed release dates. New techniques and technologies are continually trialled during development in order to achieve maximum efficiency for the creative asset pipelines and ongoing software support. </p><br>
 				<p>Currently planned releases: 
-					<ul>
+					<ul class="ui list">
 						<li>Langenium: Epoch Exordium</li>
 						<li>Langenium: Airship Academy</li>
 						<li>Langenium MMO</li>
@@ -48,7 +50,7 @@ Creative development: <a href="https://github.com/paulbrzeski/Langenium-Universe
 					</ul>
  				</p><br>
  				<p>Other media: 
-	 				<ul>
+	 				<ul class="ui list">
 		 				<li>Langenium webcomics </li>
 		 				<li>Merchandise</li>
 	 				</ul>
