- Setup to generate HTML/CSS - Wrote out HTML scaffold - Need to now style columns

--- a/new/index.html
+++ b/new/index.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <title>Langenium 2016 Rebuild</title>
-    <script>console.log("Website Loaded");</script>
+    <script>console.log("Website Loaded")</script>
+    <link href="styles.css" rel="stylesheet">
   </head>
   <body>
-    Stuff is here
-    Yay?
+    <div class="container">
+      <header>
+        <h1 class="logo">Langenium</h1>
+        <nav></nav>Header menu
+        <div class="like_button"><a href="#">Like</a></div>
+      </header>
+      <div class="row">
+        <div class="hero">Interactive Hero Area</div>
+        <div class="call_to_action">
+          <ul>
+            <li><a href="#">Play</a></li>
+            <li><a href="#">Concept Art</a></li>
+            <li><a href="#">Storyline</a></li>
+            <li><a href="#">Github</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="row">
+        <div class="news">News</div>
+        <div class="most_popular">Most Popular</div>
+      </div>
+    </div>
   </body>
 </html>
