Grid is looking good. Ready to scaffold up secondary pages

--- a/new/index.html
+++ b/new/index.html
@@ -28,9 +28,16 @@
   <body>
     <div id="fb-root"></div>
     <div class="container">
-      <header>
-        <h1 class="logo">Langenium</h1>
-        <nav></nav>Header menu
+      <header class="row">
+        <h1 class="logo"> <a href="/">Langenium</a></h1>
+        <nav>
+          <ul>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Status</a></li>
+            <li><a href="#">Gallery</a></li>
+            <li><a href="#">Wiki</a></li>
+          </ul>
+        </nav>
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
       <div class="row">
