--- a/new/index.html
+++ b/new/index.html
@@ -8,7 +8,7 @@
     <div id="fb-root"></div>
     <div class="container">
       <header class="row">
-        <h1 class="logo"> <a href="/">Langenium</a></h1>
+        <h1 class="logo"> <a href="/" title="Langenium"><img src="logo.png"></a></h1>
         <nav>
           <ul>
             <li><a href="#">About</a></li>
@@ -91,5 +91,7 @@
     ga('send', 'pageview');
   </script>
   <script src="vendor/jquery/dist/jquery.min.js"></script>
-  <script src="vendor/jquery/dist/jquery.min.js"></script>
+  <script src="vendor/Live2D-WebGL-SDK/lib/live2d.min.js"></script>
+  <script src="vendor/threejs/build/three.min.js"></script>
+  <script src="vendor/Live2D_ThreeJS/Live2DRender.js"></script>
 </html>
