--- a/new/index.html
+++ b/new/index.html
@@ -34,19 +34,17 @@
       </div>
       <div class="row">
         <div class="news">
-          <h2>News</h2><h3>This is the title of a new article</h3>
+          <h2>News</h2>### This is the title of a new article
+_27th of August 2016_
 
-<p><em>27th of August 2016</em></p>
+Bacon ipsum dolor amet frankfurter boudin capicola pig bacon sausage brisket beef cupim ground round. Pork belly ball tip spare ribs, andouille kielbasa jowl chicken capicola. 
 
-<p>Bacon ipsum dolor amet frankfurter boudin capicola pig bacon sausage brisket beef cupim ground round. Pork belly ball tip spare ribs, andouille kielbasa jowl chicken capicola. </p>
+Tenderloin turkey ball tip swine, ham hock capicola sausage. Pork chop kielbasa jowl, beef ribs cow jerky leberkas biltong. Capicola sirloin corned beef pancetta rump pork chop meatloaf salami ground round ribeye sausage shoulder alcatra chuck.
 
-<p>Tenderloin turkey ball tip swine, ham hock capicola sausage. Pork chop kielbasa jowl, beef ribs cow jerky leberkas biltong. Capicola sirloin corned beef pancetta rump pork chop meatloaf salami ground round ribeye sausage shoulder alcatra chuck.</p>
+### Another article begins with this heading
+_25th of August 2016_
 
-<h3>Another article begins with this heading</h3>
-
-<p><em>25th of August 2016</em></p>
-
-<p>Pork belly jerky leberkas pork alcatra turducken fatback. Sausage ribeye shoulder doner shankle, ham hock pork chop ham frankfurter tongue. Tri-tip tail meatball chicken. Hamburger cow alcatra strip steak drumstick, sausage corned beef filet mignon pastrami shoulder brisket chuck pork belly prosciutto.</p>
+Pork belly jerky leberkas pork alcatra turducken fatback. Sausage ribeye shoulder doner shankle, ham hock pork chop ham frankfurter tongue. Tri-tip tail meatball chicken. Hamburger cow alcatra strip steak drumstick, sausage corned beef filet mignon pastrami shoulder brisket chuck pork belly prosciutto.
         </div>
         <div class="most_popular">
           <h2>Most Popular</h2>
@@ -71,27 +69,26 @@
       </div>
     </div>
   </body>
-  <script>
-    // Facebook Like Button.
-    (function(d, s, id) {
-      var js, fjs = d.getElementsByTagName(s)[0];
-      if (d.getElementById(id)) return;
-      js = d.createElement(s); js.id = id;
-      js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.8";
-      fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));
-     
-    // Google Analytics
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-     
-    ga('create', 'UA-37159175-1', 'auto');
-    ga('send', 'pageview');
-  </script>
   <script src="vendor/jquery/dist/jquery.min.js"></script>
   <script src="vendor/Live2D-WebGL-SDK/lib/live2d.min.js"></script>
   <script src="vendor/threejs/build/three.min.js"></script>
   <script src="vendor/Live2D_ThreeJS/Live2DRender.js"></script>
+  <script></script>
+  // Facebook Like Button.
+  (function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.8";
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));
+   
+  // Google Analytics
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+   
+  ga('create', 'UA-37159175-1', 'auto');
+  ga('send', 'pageview');
 </html>
