--- a/new/index.html
+++ b/new/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Langenium 2016 Rebuild</title>
-    <link href="styles.css" rel="stylesheet">
+    <link href="dist/styles.css" rel="stylesheet">
   </head>
   <body>
     <div id="fb-root"></div>
