--- a/new/index.html
+++ b/new/index.html
@@ -2,19 +2,19 @@
 <html>
   <head>
     <title>Langenium 2016 Rebuild</title>
-    <link href="dist/styles.css" rel="stylesheet">
+    <link href="/dist/styles.css" rel="stylesheet">
   </head>
   <body>
     <div id="fb-root"></div>
     <div class="container">
       <header class="row">
-        <h1 class="logo"> <a href="/" title="Langenium"><img src="logo.png"></a></h1>
+        <h1 class="logo"> <a href="/" title="Langenium"><img src="/logo.png"></a></h1>
         <nav>
           <ul>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Status</a></li>
-            <li><a href="#">Gallery</a></li>
-            <li><a href="#">Wiki</a></li>
+            <li><a href="/games">Games</a></li>
+            <li><a href="/about.html">About</a></li>
+            <li><a href="/gallery">Gallery</a></li>
+            <li><a href="/wiki">Wiki</a></li>
           </ul>
         </nav>
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
@@ -69,10 +69,10 @@ Pork belly jerky leberkas pork alcatra turducken fatback. Sausage ribeye shoulde
       </div>
     </div>
   </body>
-  <script src="vendor/jquery/dist/jquery.min.js"></script>
-  <script src="vendor/Live2D-WebGL-SDK/lib/live2d.min.js"></script>
-  <script src="vendor/threejs/build/three.min.js"></script>
-  <script src="vendor/Live2D_ThreeJS/Live2DRender.js"></script>
+  <script src="/vendor/jquery/dist/jquery.min.js"></script>
+  <script src="/vendor/Live2D-WebGL-SDK/lib/live2d.min.js"></script>
+  <script src="/vendor/threejs/build/three.min.js"></script>
+  <script src="/vendor/Live2D_ThreeJS/Live2DRender.js"></script>
   <script>
     // Facebook Like Button.
     (function(d, s, id) {
