Finished setting up IA

--- a/new/index.html
+++ b/new/index.html
@@ -34,17 +34,19 @@
       </div>
       <div class="row">
         <div class="news">
-          <h2>News</h2>### This is the title of a new article
-_27th of August 2016_
+          <h2>News</h2><h3>This is the title of a new article</h3>
 
-Bacon ipsum dolor amet frankfurter boudin capicola pig bacon sausage brisket beef cupim ground round. Pork belly ball tip spare ribs, andouille kielbasa jowl chicken capicola. 
+<p><em>27th of August 2016</em></p>
 
-Tenderloin turkey ball tip swine, ham hock capicola sausage. Pork chop kielbasa jowl, beef ribs cow jerky leberkas biltong. Capicola sirloin corned beef pancetta rump pork chop meatloaf salami ground round ribeye sausage shoulder alcatra chuck.
+<p>Bacon ipsum dolor amet frankfurter boudin capicola pig bacon sausage brisket beef cupim ground round. Pork belly ball tip spare ribs, andouille kielbasa jowl chicken capicola. </p>
 
-### Another article begins with this heading
-_25th of August 2016_
+<p>Tenderloin turkey ball tip swine, ham hock capicola sausage. Pork chop kielbasa jowl, beef ribs cow jerky leberkas biltong. Capicola sirloin corned beef pancetta rump pork chop meatloaf salami ground round ribeye sausage shoulder alcatra chuck.</p>
 
-Pork belly jerky leberkas pork alcatra turducken fatback. Sausage ribeye shoulder doner shankle, ham hock pork chop ham frankfurter tongue. Tri-tip tail meatball chicken. Hamburger cow alcatra strip steak drumstick, sausage corned beef filet mignon pastrami shoulder brisket chuck pork belly prosciutto.
+<h3>Another article begins with this heading</h3>
+
+<p><em>25th of August 2016</em></p>
+
+<p>Pork belly jerky leberkas pork alcatra turducken fatback. Sausage ribeye shoulder doner shankle, ham hock pork chop ham frankfurter tongue. Tri-tip tail meatball chicken. Hamburger cow alcatra strip steak drumstick, sausage corned beef filet mignon pastrami shoulder brisket chuck pork belly prosciutto.</p>
         </div>
         <div class="most_popular">
           <h2>Most Popular</h2>
