--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
 <p><em>11th of December 2016</em></p>
 
 <p>This is a full rebuild of the site. Please visit the <a href="http://facebook.com/Langenium">Langenium Facebook Page</a> for more information.</p>
-
-<p>&lt;iframe width=&quot;560&quot; height=&quot;315&quot; src=&quot;https://www.youtube.com/embed/cJcr09qIVrI&quot; frameborder=&quot;0&quot; allowfullscreen&gt;&lt;/iframe&gt;</p>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/cJcr09qIVrI" frameborder="0" allowfullscreen=""></iframe>
         </div>
         <div class="most_popular">
           <h2>Most Popular</h2>
