Removed most popullar

--- a/index.html
+++ b/index.html
@@ -41,26 +41,7 @@
 <p>This is a full rebuild of the site. Please visit the <a href="http://facebook.com/Langenium">Langenium Facebook Page</a> for more information.</p>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/cJcr09qIVrI" frameborder="0" allowfullscreen=""></iframe>
         </div>
-        <div class="most_popular">
-          <h2>Most Popular</h2>
-          <ul>
-            <li>
-              <h3> <a href="#">Bacon ipsum dolor amet frankfurter boudin</a></h3>
-            </li>
-            <li>
-              <h3> <a href="#">Ham hock capicola sausage</a></h3>
-            </li>
-            <li>
-              <h3> <a href="#">Tri-tip tail meatball chicken</a></h3>
-            </li>
-            <li>
-              <h3> <a href="#">Hamburger cow alcatra strip steak drumstick</a></h3>
-            </li>
-            <li>
-              <h3> <a href="#">Capicola sirloin corned beef pancetta rump pork chop</a></h3>
-            </li>
-          </ul>
-        </div>
+        <div class="most_popular"></div>
       </div>
     </div>
   </body>
