--- a/wiki/index.html
+++ b/wiki/index.html
@@ -24,10 +24,7 @@
       </div>
     </div>
   </body>
-  <script src="/vendor/jquery/dist/jquery.min.js"></script>
-  <script src="/vendor/Live2D-WebGL-SDK/lib/live2d.min.js"></script>
-  <script src="/vendor/threejs/build/three.min.js"></script>
-  <script src="/vendor/Live2D_ThreeJS/Live2DRender.js"></script>
+  <script src="/dist/vendor.js"></script>
   <script>
     // Facebook Like Button.
     (function(d, s, id) {
