--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     </div>
   </body>
   <script src="/dist/vendor.js"></script>
+  <script src="/dist/example.js"></script>
   <script>
     // Facebook Like Button.
     (function(d, s, id) {
