--- a/wiki/index.html
+++ b/wiki/index.html
@@ -25,6 +25,7 @@
     </div>
   </body>
   <script src="/dist/vendor.js"></script>
+  <script src="/dist/example.js"></script>
   <script>
     // Facebook Like Button.
     (function(d, s, id) {
