--- a/gallery/index.html
+++ b/gallery/index.html
@@ -25,6 +25,13 @@
     </div>
   </body>
   <script src="/dist/vendor.js"></script>
+  <script src="/vendor/jquery/dist/jquery.min.js"></script>
+  <script src="/vendor/threejs/build/three.min.js"></script>
+  <script src="/vendor/Live2D-WebGL-SDK/lib/live2d.min.js"></script>
+  <script src="/vendor/Live2D-WebGL-SDK/framework/Live2DFramework.js"></script>
+  <script src="/vendor/Live2D-WebGL-SDK/framework/PlatformManager.js"></script>
+  <script src="/vendor/Live2D-WebGL-SDK/framework/LAppLive2DManager.js"></script>
+  <script src="/vendor/Live2D_ThreeJS/Live2DRender.js"></script>
   <script src="/dist/example.js"></script>
   <script>
     // Facebook Like Button.
