--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
   <script src="/vendor/jquery/dist/jquery.min.js"></script>
   <script src="/vendor/threejs/build/three.min.js"></script>
   <script src="/vendor/threejs/examples/js/controls/OrbitControls.js"></script>
+  <script src="/dist/Mirror.js"></script>
   <script src="/vendor/Live2D-WebGL-SDK/lib/live2d.min.js"></script>
   <script src="/vendor/Live2D-WebGL-SDK/framework/Live2DFramework.js"></script>
   <script src="/vendor/Live2D-WebGL-SDK/sample/sampleApp1/src/PlatformManager.js"></script>
