Logo is looking nicer

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ void main()
     vec4 mvPosition = modelMatrix * vec4( position, 1.0 );
     vViewPosition = cameraPosition - mvPosition.xyz;
 
-    vTexCoord3D = 11. * ( position.xyz + vec3( -time, -time, -time ) );
+    vTexCoord3D = .1 * ( position.xyz + vec3( -time, -time, -time ) );
 
     gl_Position = projectionMatrix * modelViewMatrix * vec4( position, 1.0 );
 }
@@ -179,7 +179,7 @@ void main()
     vec4 mvPosition = modelMatrix * vec4( position, 1.0 );
     vViewPosition = cameraPosition - mvPosition.xyz;
 
-    vTexCoord3D = 15.5 * ( position.xyz + vec3( time, time , time ) );
+    vTexCoord3D = 1.5 * ( position.xyz + vec3( time, time , time ) );
 
     gl_Position = projectionMatrix * modelViewMatrix * vec4( position, 1.0 );
 }
@@ -207,7 +207,7 @@ float heightMap( vec3 coord ) {
 
   n = 0.0125 * abs(snoise(coord, 0.0625, 500. ));
   n += 0.25 * abs(snoise(coord, 0.125, -500. ));
-  n += 1.125 * abs(snoise(coord, 5., -50. ));
+  n += 0.125 * abs(snoise(coord, 5., -50. ));
   return n;
 }
 
@@ -225,9 +225,9 @@ vec4 colorFilter(float n) {
 
   vec4 color = vec4( vec3( 0.25 *n, 0.25 * n, 0.25 * n )  , 1.0 );
 
-  color.r = limitColor(0.05, 0.25, color.r);
-  color.g = limitColor(0.05, 0.25, color.g);
-  color.b = limitColor (0.05, 0.25, color.b);
+  color.r = limitColor(0.15, 0.45, color.r);
+  color.g = limitColor(0.15, 0.45, color.g);
+  color.b = limitColor (0.15, 0.45, color.b);
 
   return color;
 }
@@ -269,7 +269,7 @@ void main()
   if ( dirDotNormalHalf >= 0.0 )
     dirSpecularWeight = ( 1.0 - n ) * pow( dirDotNormalHalf, 5.0 );
 
-  vLightWeighting += vec3( 0.75, 0.75, 0.75 ) * dirSpecularWeight * n * 6.0;
+  vLightWeighting += vec3( 0.75, 0.75, 0.75 ) * dirSpecularWeight * n * 8.0;
 
   gl_FragColor *= vec4( vLightWeighting, 1.0 ); //
 }
