Added news content

--- a/index.html
+++ b/index.html
@@ -33,12 +33,19 @@
       </div>
       <div class="row">
         <div class="news">
-          <h2>News</h2><h3>Welcome to the new Langenium website!</h3>
+          <h2>News</h2><h3>THREE.JS and Live2D are up and running</h3>
+
+<p><em>18th of December 2016</em></p>
+
+<p>The biggest thing I&#39;ve wanted to achieve since first seeing the <a href="http://app2.live2d.com/a/wg/ie.html">Live2D WebGL demo</a> was to have my own manga looking characters. The Jack demo seen in the interactive hero area above is my first proof of concept. Building a new website has afforded me a clean overhead to play with new code :D I&#39;ve opted to immediately try running multiple canvases and made the logo a WebGL canvas as well.</p>
+
+<p>The next stage in development is to get the website content filled out and then styled up. It&#39;s always a bit of schlep for me as a developer.. trying to write content, come up with design and also put together a future-proofish framework for repeating this work in the future. Using <a href="https://github.com/paulbrzeski/Langenium/issues">Github Issues</a> to plan my work and track where I&#39;m up to and what I&#39;m doing has been super handy.</p>
+
+<h3>Welcome to the new Langenium website!</h3>
 
 <p><em>11th of December 2016</em></p>
 
 <p>This is a full rebuild of the site. Please visit the <a href="http://facebook.com/Langenium">Langenium Facebook Page</a> for more information.</p>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/cJcr09qIVrI" frameborder="0" allowfullscreen=""></iframe>
         </div>
         <div class="most_popular"></div>
       </div>
