Added content for games page. Moving onto gallery.. my favourite issue :P

--- a/games/index.html
+++ b/games/index.html
@@ -19,7 +19,15 @@
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
       <div class="row">
-        <h2>Under construction</h2>
+        <h2>Games</h2>
+        <p>Langenium is a project that encompasses a game engine and it's own world of games and media. Here are the games currently in development, as well as some demo's.</p>
+        <ul>
+          <li><img src="/universe/new/exordium-poster-01.png">
+            <h3>Langenium Epoch Exordium</h3>
+            <p>A single player experience with an emphasis on story and philosophy. The game tells the story of Jack, a lone operator of the Helios station. His job is to ensure the precious Exordium element is processed and sent to Earth to be used as an energy source. The space station AI has other plans.</p>
+            <p>Interactive demos of the game are coming soon!</p>
+          </li>
+        </ul>
       </div>
     </div>
   </body>
