Created gallery and wiki pages

--- a/wiki/index.html
+++ b/wiki/index.html
@@ -10,15 +10,20 @@
       <header class="row"><a class="logo" href="/" title="Langenium"><img src="/logo.png"></a>
         <nav>
           <ul>
-            <li><a href="/games">Games</a></li>
             <li><a href="/about.html">About</a></li>
+            <li><a href="/gallery">Gallery</a></li>
+            <li><a href="/games">Games</a></li>
             <li><a href="/wiki">Wiki</a></li>
           </ul>
         </nav>
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
       <div class="row">
-        <h2>Under construction</h2>
+        <h2>Welcome to the Langenium Wiki</h2>
+        <ul>
+          <li><a href="/wiki/storylines.html">Storylines</a></li>
+          <li><a href="/wiki/technology_of_2099.html">Technology of 2099</a></li>
+        </ul>
       </div>
     </div>
   </body>
