--- a/wiki/storylines.html
+++ b/wiki/storylines.html
@@ -19,35 +19,19 @@
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
       <div class="row">
-        <div class="hero"> 
-          <h1>Interactive Hero Area</h1>
-        </div>
-        <div class="call_to_action">
-          <ul class="row">
-            <li><a href="/games.html">Play</a></li>
-            <li><a href="/gallery/concept-art.html">Concept Art</a></li>
-            <li><a href="/wiki/storylines.html">Storylines</a></li>
-            <li><a href="http://github.com/paulbrzeski/Langenium">Github</a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="row">
-        <div class="news">
-          <h2>News</h2><h3>THREE.JS and Live2D are up and running</h3>
+        <h2>Storylines</h2><h3>Prologue for Epoch Exordium</h3>
 
-<p><em>18th of December 2016</em></p>
+<p>In 2076, the human race seems to be at a breaking point. There has been no oil for 50 years. Coal is rare. Nuclear fission ended up hitting the mainstream as a result, however an Earthquake in.Europe caused a disaster at several plants. Their only.option was to &#39;decontaminate&#39; the area with special hydrogen bombs that sucked the radiation into space, however this pushes those regions.into a permanent unlivable winter. This causes extremes to occur in the Earth climate; whatever isn&#39;t frozen turns.into a harsh desert. The decision to freeze the irradiated sites was proposed by Dr Olivia Bishop and carried out by scientists from CERN, despite several military organizations objecting to their role being usurped by the intellectual elite.</p>
 
-<p>The biggest thing I&#39;ve wanted to achieve since first seeing the <a href="http://app2.live2d.com/a/wg/ie.html">Live2D WebGL demo</a> was to have my own manga looking characters. The Jack demo seen in the interactive hero area above is my first proof of concept. Building a new website has afforded me a clean overhead to play with new code :D I&#39;ve opted to immediately try running multiple canvases and made the logo a WebGL canvas as well.</p>
+<p>Project Humanity is setup in 2077 as a UN failsafe/first response unit for any potential threats to the continued existence of the human race.</p>
 
-<p>The next stage in development is to get the website content filled out and then styled up. It&#39;s always a bit of schlep for me as a developer.. trying to write content, come up with design and also put together a future-proofish framework for repeating this work in the future. Using <a href="https://github.com/paulbrzeski/Langenium/issues">Github Issues</a> to plan my work and track where I&#39;m up to and what I&#39;m doing has been super handy.</p>
+<p>WERP is an early PH initiative in 2077 to develop accessible and abundant clean energy sources. This is in direct response to the disaster that devastated Europe. </p>
 
-<h3>Welcome to the new Langenium website!</h3>
+<p>May is a research biologist who acts as project leader. She has been trying to develop artificial biomass based machinery for power and manufacturing, as a possible alternative to metal/circuit based tech.</p>
 
-<p><em>11th of December 2016</em></p>
+<p>By 2099, the organization was largely discredited due to being blamed for the transformed weather system, embezzlement and corruption. Many corporations and governments opt to cease funding and by the time Phoenix Day hits, the organization is severely crippled by continued attacks from politicians and business leaders who accuse it of being a waste of money and having leaders who are fueled by paranoid delusions of &#39;doomsday prophets&#39; of things like meteor strikes, solar flares and catastrophic climate change. Dr Olivia Bishop and her team, in particular, are the subject of a lot of outrage as their decision that saved Europe is seen as an avoidable and catastrophic mistake. Several conspiracy theorists believe it was a move to convince the public to create PH in the first place, so that &quot;the scientist fat cats can steal our hard earned money and live it up and conduct ridiculous and expensive experiments to feed their own narcissism and do nothing to enrich the human race&quot;</p>
 
-<p>This is a full rebuild of the site. Please visit the <a href="http://facebook.com/Langenium">Langenium Facebook Page</a> for more information.</p>
-        </div>
-        <div class="most_popular"></div>
+<p>The power structure of Project Humanity is based around a mixed appointed and elected board of scientists known as the Council. Councillors are either select politicians or &#39;department heads&#39; of scientific units which can then be broken down into teams. May is only a team leader.</p>
       </div>
     </div>
   </body>
