--- a/gallery/concept-art.html
+++ b/gallery/concept-art.html
@@ -19,35 +19,29 @@
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
       <div class="row">
-        <div class="hero"> 
-          <h1>Interactive Hero Area</h1>
-        </div>
-        <div class="call_to_action">
-          <ul class="row">
-            <li><a href="/games.html">Play</a></li>
-            <li><a href="/gallery/concept-art.html">Concept Art</a></li>
-            <li><a href="/wiki/storylines.html">Storylines</a></li>
-            <li><a href="http://github.com/paulbrzeski/Langenium">Github</a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="row">
-        <div class="news">
-          <h2>News</h2><h3>THREE.JS and Live2D are up and running</h3>
-
-<p><em>18th of December 2016</em></p>
-
-<p>The biggest thing I&#39;ve wanted to achieve since first seeing the <a href="http://app2.live2d.com/a/wg/ie.html">Live2D WebGL demo</a> was to have my own manga looking characters. The Jack demo seen in the interactive hero area above is my first proof of concept. Building a new website has afforded me a clean overhead to play with new code :D I&#39;ve opted to immediately try running multiple canvases and made the logo a WebGL canvas as well.</p>
-
-<p>The next stage in development is to get the website content filled out and then styled up. It&#39;s always a bit of schlep for me as a developer.. trying to write content, come up with design and also put together a future-proofish framework for repeating this work in the future. Using <a href="https://github.com/paulbrzeski/Langenium/issues">Github Issues</a> to plan my work and track where I&#39;m up to and what I&#39;m doing has been super handy.</p>
-
-<h3>Welcome to the new Langenium website!</h3>
-
-<p><em>11th of December 2016</em></p>
-
-<p>This is a full rebuild of the site. Please visit the <a href="http://facebook.com/Langenium">Langenium Facebook Page</a> for more information.</p>
-        </div>
-        <div class="most_popular"></div>
+        <h2>Concept Art</h2>
+        <ul>
+          <li><a href="/universe/art/production/covers/Langenium - Lux Atlas_Cellocher.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Cellocher.png"></a></li>
+          <li><a href="/universe/art/production/covers/Langenium - Lux Atlas_Drak.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Drak.png"></a></li>
+          <li><a href="/universe/art/production/covers/Langenium - Lux Atlas_Elx.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Elx.png"></a></li>
+          <li><a href="/universe/art/production/covers/Langenium - Lux Atlas_Epoch Langenius.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Epoch Langenius.png"></a></li>
+          <li><a href="/universe/art/production/covers/Langenium - Lux Atlas_Ganetti.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Ganetti.png"></a></li>
+          <li><a href="/universe/art/production/covers/Langenium - Lux Atlas_Hircus.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Hircus.png"></a></li>
+          <li><a href="/universe/art/production/covers/Langenium - Lux Atlas_Host.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Host.png"></a></li>
+          <li><a href="/universe/art/production/covers/Langenium - Lux Atlas_Krahm.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Krahm.png"></a></li>
+          <li><a href="/universe/art/production/covers/Langenium - Lux Atlas_Lupus.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Lupus.png"></a></li>
+          <li><a href="/universe/art/production/covers/Langenium - Lux Atlas_Lux_Atlantis.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Lux_Atlantis.png"></a></li>
+          <li><a href="/universe/art/production/covers/Langenium - Lux Atlas_Mantis.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Mantis.png"></a></li>
+          <li><a href="/universe/art/production/covers/Langenium - Lux Atlas_Maya.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Maya.png"></a></li>
+          <li><a href="/universe/art/production/covers/Langenium - Lux Atlas_Mon-Kis.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Mon-Kis.png"></a></li>
+          <li><a href="/universe/art/production/covers/Langenium - Lux Atlas_Rise of Guardians.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Rise of Guardians.png"></a></li>
+          <li><a href="/universe/art/production/covers/Langenium - Lux Atlas_Robot.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Robot.png"></a></li>
+          <li><a href="/universe/art/production/covers/Langenium - Lux Atlas_Sinnis.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Sinnis.png"></a></li>
+          <li><a href="/universe/art/production/covers/Langenium - Lux Atlas_Tigris.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Tigris.png"></a></li>
+          <li><a href="/universe/art/production/covers/Langenium - Lux Atlas_Torton.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Torton.png"></a></li>
+          <li><a href="/universe/art/production/covers/Langenium - Lux Atlas_WERP.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_WERP.png"></a></li>
+          <li><a href="/universe/art/production/covers/Langenium - Lux Atlas_World Eater.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_World Eater.png"></a></li>
+        </ul>
       </div>
     </div>
   </body>
