--- a/games/index.html
+++ b/games/index.html
@@ -10,8 +10,9 @@
       <header class="row"><a class="logo" href="/" title="Langenium"><img src="/logo.png"></a>
         <nav>
           <ul>
-            <li><a href="/games">Games</a></li>
             <li><a href="/about.html">About</a></li>
+            <li><a href="/gallery">Gallery</a></li>
+            <li><a href="/games">Games</a></li>
             <li><a href="/wiki">Wiki</a></li>
           </ul>
         </nav>
