--- a/wiki/technology_of_2099.html
+++ b/wiki/technology_of_2099.html
@@ -19,35 +19,67 @@
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
       <div class="row">
-        <div class="hero"> 
-          <h1>Interactive Hero Area</h1>
-        </div>
-        <div class="call_to_action">
-          <ul class="row">
-            <li><a href="/games.html">Play</a></li>
-            <li><a href="/gallery/concept-art.html">Concept Art</a></li>
-            <li><a href="/wiki/storylines.html">Storylines</a></li>
-            <li><a href="http://github.com/paulbrzeski/Langenium">Github</a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="row">
-        <div class="news">
-          <h2>News</h2><h3>THREE.JS and Live2D are up and running</h3>
+        <h2>Technology of 2099</h2><h2>Technology of 2099</h2>
 
-<p><em>18th of December 2016</em></p>
+<h4>Computers</h4>
 
-<p>The biggest thing I&#39;ve wanted to achieve since first seeing the <a href="http://app2.live2d.com/a/wg/ie.html">Live2D WebGL demo</a> was to have my own manga looking characters. The Jack demo seen in the interactive hero area above is my first proof of concept. Building a new website has afforded me a clean overhead to play with new code :D I&#39;ve opted to immediately try running multiple canvases and made the logo a WebGL canvas as well.</p>
+<h5>Semi-Conductive Programmable Silicate (S.C.P.S.)</h5>
 
-<p>The next stage in development is to get the website content filled out and then styled up. It&#39;s always a bit of schlep for me as a developer.. trying to write content, come up with design and also put together a future-proofish framework for repeating this work in the future. Using <a href="https://github.com/paulbrzeski/Langenium/issues">Github Issues</a> to plan my work and track where I&#39;m up to and what I&#39;m doing has been super handy.</p>
+<p>Holographic processor/circuit board/processor. Circuit boards are now carved into 3D structures with the required transistors et al being placed and sealed within. </p>
 
-<h3>Welcome to the new Langenium website!</h3>
+<h5>Optical Storage Silicate (OSS)</h5>
 
-<p><em>11th of December 2016</em></p>
+<p>Holographic storage. An O.S.S. crystal stores information. Lasers read and write to it. The material looks like quartz, but isn&#39;t quartz. </p>
 
-<p>This is a full rebuild of the site. Please visit the <a href="http://facebook.com/Langenium">Langenium Facebook Page</a> for more information.</p>
-        </div>
-        <div class="most_popular"></div>
+<h5>Ionized Regular Air Hologram (IRAH)</h5>
+
+<p>Holographic displays. IRAH project a 3D hologram into open space, without using a gas chamber or &#39;refractor plate&#39;.</p>
+
+<h4>Stations</h4>
+
+<p>Stations are made of modules that are held together by trusses. </p>
+
+<p>Each module has it&#39;s own independent airlock. </p>
+
+<ul><li>Oxygen farm to replace stale air on docked ships, some Oxygen farms are dubbed Babylon-pods, meaning they integrate all or aspects of the Babylon design to grow food</li><li>Water recycling plant to replace water and empty sewage tank</li><li>Solar wind collectors for power</li><li>Travel Cannon - the barrel is made of superconductor rings that are quantum locked with each other. The launchpad explodes with a small fission reaction. Pods have to be powered down at launch to prevent damage as a result.</li><li>Travel Net - powerful supermagnets that ease the speed of and &#39;catch&#39; the pods</li></ul>
+
+<h5>Travel Pod</h5>
+
+<p>Pod with minimal thruster capacity. Mainly for passengers and cargo. Pods can contain travelling comforts like separate living/sleeping quarters and a functioning toilet and shower. Centrifugal gravity is achieved via spinning the pod at launch and prolonged with special gyroscopic equipment.</p>
+
+<p>A Travel Pod that is unlikely to meet it&#39;s destination can be retrieved by firing an emergency drone. Once near their target, these run on actual fuel though so they are used sparsely. </p>
+
+<h5>INDI Cannon (Inter-space Nuclear Departure Ignition Cannon)</h5>
+
+<p>A deliberate acronym named after Indiana Jones when he rode a nuclear bomb in a fridge in the Crystal Skull. </p>
+
+<p>Launches pods of either passengers or cargo. As travellers approach Stations (particularly far away ones), their centrifugal gravity weakens and can even fade entirely. </p>
+
+<p>The INDI Cannon is a bit like a gun, however it creates a tiny fission reaction for the launch. pods are fired through superconductive rings that spin up the pod to create gravity.</p>
+
+<h5>Travel Net</h5>
+
+<p>The rings of the Indi Cannon can be re-arranged to create a magnetic net that attracts and catches nearby pods. </p>
+
+<h4>Agriculture</h4>
+
+<h5>Babylon Tower (Farm Architecture/Engineering)</h5>
+
+<p>Named for the Hanging Gardens of Babylon as the solution to the design came from ancient tablets discovered in Iraq, dubbed &#39;The Last Testament of Babylon&#39;. The Babylon design uses a combination of grafting and strategic placement to achieve maximum efficiency with water and nutrients, as well as ensuring maximum product yield. </p>
+
+<p>Biologists theorize that it would take thousands of years of trial and error to achieve the perfect precision of the tower&#39;s agricultural design as it seems to take into account various weather conditions, contains massive biodiversity with edibles and medicinals and is very flexible in terms of scalability. Specific crops can be grown in larger or smaller amounts, and if the design is adhered to, the integrity/efficiency of the &#39;garden&#39; is maintained.</p>
+
+<p>The most astonishing fact about the Babylon Tower is that it doesn&#39;t actually describe any plant species specifically. The Last Testament of Babylon has a diagram of various symbols and how to create an irrigation system. The symbols represent characteristics of plants including leaf patterns, root structures and intended purpose (e.g. medicinals have information about possible ailments). It is theorized that these are blueprints from an ancient alien race. Blueprints that may prove life on Earth had been tampered with by visitors.</p>
+
+<p>Traditional agriculture is no longer viable as the mainstream food source due to shortages of land, unpredictable weather patterns and various toxic chemicals in the air, depending on the region.</p>
+
+<p>Due to a shortage of grazing land, there are chicken and pig pens in some Babylon Towers. Meat is a luxury though and most people get their protein from insects and &#39;beaker gruel&#39;, which is a type of cloned meat slop. There are luxury forms of &#39;beaker gruel&#39; that are &#39;steak-like&#39;, but rich people wouldn&#39;t bother as they can afford real meat.</p>
+
+<h3>Langenium MMO (2099 AD and 2299 AD)</h3>
+
+<p>Technology and lifestyle of 2099</p>
+
+<p>Technology and lifestyle of 2299</p>
       </div>
     </div>
   </body>
