Fixed games link

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="call_to_action">
           <ul class="row">
-            <li><a href="/games.html">Play</a></li>
+            <li><a href="/games">Play</a></li>
             <li><a href="/gallery/concept-art.html">Concept Art</a></li>
             <li><a href="/wiki/storylines.html">Storylines</a></li>
             <li><a href="http://github.com/paulbrzeski/Langenium">Github</a></li>
