Template inheritance :D Pages are much cleaner now

--- a/games/index.html
+++ b/games/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Langenium 2016 Rebuild</title>
+    <title>Games | Langenium
+    </title>
     <link href="/dist/styles.css" rel="stylesheet">
   </head>
   <body>
