--- a/gallery/index.html
+++ b/gallery/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Langenium 2016 Rebuild</title>
+    <title>Gallery | Langenium
+    </title>
     <link href="/dist/styles.css" rel="stylesheet">
   </head>
   <body>
@@ -19,11 +20,12 @@
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
       <div class="row">
-        <h2>Gallery</h2>
-        <ul>
-          <li><a href="/gallery/concept-art.html">
-              <h3>Concept Art</h3><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_World Eater.png"></a></li>
-        </ul>
+        <h2>Gallery
+          <ul>
+            <li><a href="/gallery/concept-art.html">
+                <h3>Concept Art</h3><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_World Eater.png"></a></li>
+          </ul>
+        </h2>
       </div>
     </div>
   </body>
