--- a/wiki/technology_of_2099.html
+++ b/wiki/technology_of_2099.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Langenium 2016 Rebuild</title>
+    <title>Technology of 2099 | Wiki | Langenium
+    </title>
     <link href="/dist/styles.css" rel="stylesheet">
   </head>
   <body>
