Added some new pages. Basic styling so the site is presentable

--- a/wiki/index.html
+++ b/wiki/index.html
@@ -24,6 +24,7 @@
         <ul>
           <li><a href="/wiki/storylines.html">Storylines</a></li>
           <li><a href="/wiki/technology_of_2099.html">Technology of 2099</a></li>
+          <li><a href="/wiki/werp.html">WERP</a></li>
         </ul>
       </div>
     </div>
