--- a/gallery/index.html
+++ b/gallery/index.html
@@ -21,9 +21,11 @@
       </header>
       <div class="row">
         <h2>Gallery
-          <ul>
+          <ul class="gallery">
             <li><a href="/gallery/concept-art.html">
                 <h3>Concept Art</h3><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_World Eater.png"></a></li>
+            <li><a href="/gallery/posters.html">
+                <h3>Posters</h3><img src="/universe/art/production/posters/thumb_Feature Poster-01.png"></a></li>
           </ul>
         </h2>
       </div>
