Added music page

--- a/games/character_test.html
+++ b/games/character_test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Character Test | Langenium
+    <title>Character Test | Game Demos | Langenium
     </title>
     <link href="/dist/styles.css" rel="stylesheet">
   </head>
