--- a/games/index.html
+++ b/games/index.html
@@ -27,6 +27,7 @@
         <p>Interactive demos of the game are coming soon!</p>
         <ul>
           <li><a href="/games/character_test.html">Character test</a></li>
+          <li><a href="/games/character_test.html">Music</a></li>
         </ul><img src="/universe/new/exordium-poster-01.png">
       </div>
     </div>
